# cpp-strings

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  strings.h
tests/src/: strings.test.cc
